# whisper-fastapi-asr

./: .gitignore  README.md
asr_minimal/: CMakeLists.txt  main.cpp
fastapi_whisper/: Dockerfile  README.md  docker-compose.yml
fastapi_whisper/app/: main.py  runner.py
